--- a/styles/style.css
+++ b/styles/style.css
@@ -75,3 +75,112 @@
     padding: 10px;
     margin-top: 20px;
 }
+/* curriculum section styles */
+.curriculim{
+    text-align: center;
+}
+.s-title{
+    font-size: 3rem;
+}
+.cart-container{
+    margin: 0 auto;
+    margin-top: 30px;
+    display: flex;
+    gap: 30px;
+    max-width: 90%;
+    border-radius: 12px;
+}
+.cart{
+    border-radius: 18px;
+    padding: 10px;
+    margin: 10px;
+    width: 30%;
+}
+
+.cart>a{
+    text-decoration: none;
+}
+.color-1{
+    color: rgba(100, 200, 255, 1);
+}
+.color-2{
+    color: rgba(240, 170, 0, 1)
+}
+.color-3{
+    color: rgba(135, 0, 255, 1);
+}
+.cart-title, .cart-des{
+    margin-top: 10px;
+}
+/* story section styles */
+.story{
+    text-align: center;
+    margin: 20px;
+    background-image: linear-gradient(to top, rgba(254, 163, 1, 1), white);
+}
+.pic-container{
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    gap: 20px;
+}
+.first-clm{
+    overflow: hidden;
+    border-radius: 16px;
+    background-color: white;
+    text-align: left;
+}
+.first-clm img{
+    width: 100%;
+    height: 60%;
+}
+.pic-description{
+    padding: 10px;
+    margin-top: 20px;
+}
+.second-clm{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+.pic-cart{
+    border-radius: 15px;
+    background-color: white;
+    overflow: hidden;
+}
+.pic-cart img{
+    width: 100%;
+    height: 50%;
+}
+.pic-cart h3{
+    padding: 10px;
+}
+
+
+@media screen and (max-width: 576px) {
+     
+    .navbar, .logo, .list > ul{
+        flex-direction: column;
+        justify-content: center;
+        width: 80%;
+        margin: 0 auto;
+    }
+    .cart-container{
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+    }
+    .cart{
+        width: 70%;
+    }
+    .list > ul{
+        max-width: 90%;
+        margin: 0 auto;
+    }
+    .banner{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
