--- a/styles/style.css
+++ b/styles/style.css
@@ -48,21 +48,25 @@
 
 .banner{
     display: flex;
-    max-width: 90%;
+    width: 90%;
     margin: 0 auto;
     margin-top: 50px;
     justify-content: space-between;
 }
 .b-description{
-    max-width: 50%;
+    width: 50%;
     justify-content: center;
     align-items: center;
-    padding: 120px 0;
+    margin-top: 250px;
 }
 .b-img{
-    max-width: 50%;
-    justify-content: right;
-    overflow: hidden;
+    width: 50%;
+    display: flex;
+    justify-content: end;
+}
+.hero-kid{
+    width: 100%;
+    height: 100%;
 }
 .b-title{
     font-size: 3.5em;
@@ -188,27 +192,31 @@ footer{
 .touch-images{
     margin-top: 30px;
 }
+
+/* responsive styles starts here */
+
 @media screen and (max-width: 576px) {
-    .navbar , .logo, .list > ul{
+    .navbar{
         flex-direction: column;
-        justify-content: center;
-        width: 80%;
-        margin: 0 auto;
     }
-    .cart-container{
-        flex-direction: column;
-        align-items: center;
-        width: 90%;
+    nav{
+        border-bottom: 1px solid orange;
     }
-    .cart{
-        width: 70%;
-    }
-    .list > ul{
-        max-width: 90%;
-        margin: 0 auto;
+    .school, .list, .btn{
+        display: none;
     }
     .banner{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        flex-direction: column-reverse;
+    }
+    .b-img{
+        width: 200px;
+    }
+    .b-description{
+        max-width: 90%;
+        margin-top: 50px;
+        text-align: center;
+    }
+    .b-title{
+        font-size: 2em;
     }
 }
