--- a/styles/style.css
+++ b/styles/style.css
@@ -77,9 +77,14 @@
     color: white;
     border-radius: 12px;
     padding: 10px;
-    margin-top: 20px;
+    margin: 20px 0px;
+    width: 150px;
+}
+.enroll-btn:hover{
+    box-shadow: 4px 4px 4px rgb(128, 104, 104);
 }
 /* curriculum section styles */
+
 .curriculum{
     text-align: center;
     margin-top: 80px;
@@ -101,7 +106,9 @@
     margin: 10px;
     width: 30%;
 }
-
+.cart:hover{
+    box-shadow: 3px 3px rgba(240, 170, 0, 1) ;
+}
 .cart>a{
     text-decoration: none;
 }
@@ -120,8 +127,8 @@
 /* story section styles */
 .story{
     text-align: center;
-    margin: 20px;
-    background-image: linear-gradient(to top, rgba(254, 163, 1, 1), white);
+    margin: 0 auto;
+    width: 90%;
 }
 .pic-container{
     width: 90%;
@@ -142,7 +149,7 @@
     height: 60%;
 }
 .pic-description{
-    padding: 10px;
+    padding: 20px;
     margin-top: 20px;
 }
 .second-clm{
@@ -179,6 +186,9 @@ footer{
     margin-top: 10px;
     margin-bottom: 20px;
 }
+.about-s{
+    margin-top: 20px;
+}
 .about-s ul li{
     list-style: none;
     margin-top: 40px;
@@ -186,6 +196,7 @@ footer{
 .about-s ul li a{
     text-decoration: none;
     color: white;
+    cursor:crosshair;
 }
 .touch-img a{
     margin-right: 20px;
@@ -203,11 +214,16 @@ footer{
     nav{
         border-bottom: 1px solid orange;
     }
-    .school, .list, .btn{
+    .school, .list, .btn , .first-clm{
         display: none;
+    }
+    .hero-banner{
+        width: 80%;
+        margin: 0 auto;
     }
     .banner{
         flex-direction: column-reverse;
+        align-items: center;
     }
     .b-img{
         width: 200px;
@@ -221,7 +237,9 @@ footer{
         font-size: 2em;
     }
     .curriculum{
-        width: 250px;
+        width: 80%;
+        margin: 0 auto;
+        margin-top: 50px;
     }
     .s-title{
         font-size: 1.5em;
@@ -233,5 +251,39 @@ footer{
     .cart{
         width: 80%;
         margin: 0 auto;
+    }
+    .story{
+        width: 90%;
+        margin-top: 50px;
+    }
+    .pic-container{
+        display: grid;
+        grid-template-columns:auto;
+        max-width: 80%;
+    }
+    .second-clm{
+        flex-direction: column;
+    }
+    .second-clm img{
+        width: 100%;
+        height: 50%;
+    }
+    footer{
+        flex-direction: column;
+        padding: 20px;
+        gap: 20px;
+    }
+    .colom-one{
+        width: 80%;
+    }
+    .kids{
+        font-size: 1.5em;
+        color: rgb(239, 192, 131);
+    }
+    .about-s h4{
+        color: rgb(239, 192, 131);
+    }
+    .touch-title{
+        color: rgb(239, 192, 131);
     }
 }
